# dueo

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
dueo-server/: .env.example  .gitignore  Cargo.toml
dueo-server/migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_subscriptions.sql  0004_create_notifications.sql  0005_user_tz_hour.sql  0006_sub_icon_color.sql  0007_user_lang.sql  0008_username_nocase_and_indexes.sql  dueo.db
dueo-server/src/: auth.rs  categories.rs  channels.rs  data.rs  email.rs  main.rs  notifications.rs  reminders.rs  scheduler.rs  subscriptions.rs  telegram.rs  update.rs  users.rs  validate.rs
dueo-web/: .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
dueo-web/scripts/: gen-favicon.mjs
dueo-web/src/: app.css  app.html
dueo-web/src/lib/: AddSubscriptionModal.svelte  Collapsible.svelte  DonutChart.svelte  HorizonTimeline.svelte  Icon.svelte  IconColorPicker.svelte  LangPicker.svelte  Logo.svelte  NotificationsBell.svelte  Popover.svelte  ProgressRing.svelte  ReminderEditor.svelte  RingMark.svelte  RowSkeleton.svelte  Sidebar.svelte  SubscriptionRow.svelte  ThemeToggle.svelte  Topbar.svelte  actions.ts  api.ts  brandcat.svelte.ts  brands.ts  format.ts  i18n.svelte.ts  icons.ts  ring.ts  theme.svelte.ts
dueo-web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
dueo-web/src/routes/ajustes/: +page.svelte  (+1 more)
(+13 files in other folders)
